--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <head>
     <link rel="shortcut icon" href="img/favicon.ico">
     <link rel="stylesheet" href="https://unpkg.com/tachyons@4/css/tachyons.min.css">
+    <!--animate on scroll-->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!--semantic ui-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
     <!-- style CSS -->
     <link rel="stylesheet" href="style.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+  />
     <title>Page Title</title>
 </head>
 <body>
@@ -14,9 +22,10 @@
           <div 
           style="background:url(img/white.jpg) no-repeat center right;background-size: cover;"
             class="main-cover dtc v-mid cover ph3 ph4-m ph5-l">
-            <h1 class="name f2 f-subheadline-l measure lh-title fw9">Jonah Breslow
+            <h1 class="name f2 f-subheadline-l measure lh-title fw9 animate__animated animate__fadeInDownBig
+            ">Jonah Breslow
             </h1>
-            <h2 class="name f8 fw6 white">Below are some interesting projects I have been working on</h2>
+            <h2 class="name f8 fw6 white animate__animated animate__fadeInUpBig animate__slow">Below are some interesting projects I have been working on</h2>
 
             <a class="link dim gray dib h2 w2 br-100 mr3 pa2 bg-near-white ba b--black-10" target="_blank" href="https://www.linkedin.com/in/jonahbreslow/" title="">
                 <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>LinkedIn icon</title><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
@@ -38,7 +47,7 @@
 
   
   <a target="_blank" href="https://jonahbreslow.github.io/Google_Sheet_Tableau_Integration">
-  <div class="dt mw6 center pt3 pb5 pv5-m pv6-ns">
+  <div class="mycard dt mw6 center mv2" data-aos="fade-in" data-aos-delay="50">
     <div class="db dtc-ns v-mid-ns">
       <img alt="cat face" class="lazy w-100 mw7 w5-ns loaded" src="img/TabPy.png" data-ll-status="loaded">
     </div>
@@ -47,11 +56,40 @@
       <p class="lh-copy">
         Using Python to integrate Google Sheets and Tableau
       </p>
-        </a>
       <h4 class="date">June 2020</h4>
     </div>
-  </div>
+    </div>
+  </a>
+
+  <a target="_blank" href="https://jonahbreslow.github.io/Google_Sheet_Tableau_Integration">
+    <div class="mycard dt mw6 center mv6" data-aos="fade-in" data-aos-delay="50">
+      <div class="db dtc-ns v-mid-ns">
+        <img alt="cat face" class="lazy w-100 mw7 w5-ns loaded" src="img/TabPy.png" data-ll-status="loaded">
+      </div>
+      <div class="db dtc-ns v-mid ph2 pr0-ns pl3-ns">
+        <h2 class="lh-copy">Automating Tableau Dashboard Updates</h2>
+        <p class="lh-copy">
+          Using Python to integrate Google Sheets and Tableau
+        </p>
+        <h4 class="date">June 2020</h4>
+      </div>
+      </div>
+    </a>
 
 
+
+  <!--semantic UI-->
+  <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+
+<footer class="pv4 ph3 ph5-m ph6-l mid-gray">
+    <small class="f6 db tc">© 2020 <b class="ttu">Jonah Breslow</b>, All Rights Reserved</small>
+    <div class="tc mt3">
+      <a href="https://rushingmarina.github.io/rushing-marina-main-page/" target="_blank" title="Language" class="f6 dib ph2 link mid-gray dim">Website by rushingMarina</a>
+    </div>
+  </footer>
 </body>
 </html>
