--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <article class="helvetica pb5">
         <header class="vh-100 bg-black dt w-100">
           <div 
-          style="background:url(img/white.jpg) no-repeat center right;background-size: cover;"
-            class="main-cover dtc v-mid cover ph3 ph4-m ph5-l">
+            style="background:url(img/white.jpg) no-repeat center right;background-size: cover;"
+            class="main-cover dtc v-mid cover ph3 ph4-m ph5-l" >
             <h1 class="name f2 f-subheadline-l measure lh-title fw9 animate__animated animate__fadeInDownBig
             ">Jonah Breslow
             </h1>
@@ -47,7 +47,7 @@
 
   
   <a target="_blank" href="https://jonahbreslow.github.io/Google_Sheet_Tableau_Integration">
-  <div class="mycard dt mw6 center mv2" data-aos="fade-in" data-aos-delay="50">
+  <div class="mycard dt mw6 center mv2" data-aos="fade-up" data-aos-delay="50" data-aos-easing="ease-in-out" data-aos-duration="1000">
     <div class="db dtc-ns v-mid-ns">
       <img alt="cat face" class="lazy w-100 mw7 w5-ns loaded" src="img/TabPy.png" data-ll-status="loaded">
     </div>
@@ -62,7 +62,7 @@
   </a>
 
   <a target="_blank" href="https://jonahbreslow.github.io/Google_Sheet_Tableau_Integration">
-    <div class="mycard dt mw6 center mv6" data-aos="fade-in" data-aos-delay="50">
+    <div class="mycard dt mw6 center mv6" data-aos="fade-up" data-aos-delay="50" data-aos-easing="ease-in-out" data-aos-duration="1000">
       <div class="db dtc-ns v-mid-ns">
         <img alt="cat face" class="lazy w-100 mw7 w5-ns loaded" src="img/TabPy.png" data-ll-status="loaded">
       </div>
@@ -78,6 +78,8 @@
 
 
 
+    <!--jquery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!--semantic UI-->
   <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
